# immunesystem

./: README.md  algorithm.c  immune
include/: bestSelect.h  concentration.h  cross.h  excellence.h  fitness.h  individuals.h  initChrom.h  mutation.h  popInit.h  printData.h  select.h  similar.h
log/: clear.sh
src/: CMakeCache.txt  CMakeLists.txt  Makefile  bestSelect.cpp  cmake_install.cmake  concentration.cpp  cross.cpp  excellence.cpp  fitness.cpp  main.cpp  mutation.cpp  popInit.cpp  printData.cpp  restart.sh  run.sh  select.cpp  similar.cpp  tags  temp.txt
src/ImmuneSystem.dir/: CXX.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
